<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_select_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_ingredients"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@+id/ingredient_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ingredient_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/text_select_ingredients">

            <!-- Adicione botões para os 10 ingredientes aqui -->
            <Button
                android:id="@+id/button_tomate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnTomate" />

            <Button
                android:id="@+id/button_cebola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCebola" />

            <Button
                android:id="@+id/button_farinha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFarinha" />

            <Button
                android:id="@+id/button_sal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSal" />

            <Button
                android:id="@+id/button_acucar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAcucar" />

            <Button
                android:id="@+id/button_maionese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMaionese" />

            <Button
                android:id="@+id/button_pepino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnPepino" />

            <Button
                android:id="@+id/button_cenoura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCenoura" />

            <Button
                android:id="@+id/button_palmito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnPalmito" />

            <Button
                android:id="@+id/button_alface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAlface" />
            <!-- Repita para outros ingredientes -->

        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredient_buttons" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
